--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "src/server.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node src/server.js",
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test-blockchain": "node scripts/test-blockchain.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "multer": "^2.0.2"
+    "express-rate-limit": "^7.5.1",
+    "firebase-admin": "^12.7.0",
+    "helmet": "^7.2.0",
+    "morgan": "^1.10.1",
+    "multer": "^2.0.2",
+    "twilio": "^5.9.0",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
